Do build in docker so we can fetch the latest versions of things